增加配置文件

--- a/repo/server-zuul-dev.properties
+++ b/repo/server-zuul-dev.properties
@@ -4,3 +4,6 @@ zuul.routes.api1.serviceId=TEST-SERVER
 
 zuul.routes.api2.path=/api2/**
 zuul.routes.api2.serviceId=SERVER-FEIGN
+
+
+testValue=test
